Speed up GeometryWindow rendering with a specialization for rectangles